# morfeusz

./: INSTALL  README.md  Setup.hs  Setup.hs_backup  Setup.lhs  morfeusz.cabal
NLP/: Morfeusz.hsc
NLP/Morfeusz/: Lock.hs
NLP/Morfeusz/Lock/: Internal.hs
Setup/: Configure.hs
cbits/: global.c
examples/: LemmasExample.hs
libmorfeusz/: CZYTAJTO  README  libmorfeusz.so.0
src/NLP/: Morfeusz.hsc
