name:               morfeusz
version:            0.4.0
synopsis:           Bindings to the morphological analyser Morfeusz
description:
    The library provides bindings to the morphological analyser Morfeusz
    <http://sgjp.pl/morfeusz/>.
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.6
copyright:          Copyright (c) 2012 IPI PAN
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           Natural Language Processing
homepage:           https://github.com/kawu/morfeusz
build-type:         Custom

extra-source-files:
  Setup/Configure.hs
  libmorfeusz/morfeusz.h

data-dir: libmorfeusz

data-files:
  libmorfeuszPolimorf.so.0.7
  libmorfeusz.so
  libmorfeusz.so.0

flag disable-bundled-morfeusz
  default: False

library
  exposed-modules:  NLP.Morfeusz
  other-modules:    NLP.Morfeusz.Lock, NLP.Morfeusz.Lock.Internal
  build-depends:    base >= 4 && < 5, containers, text, bytestring, mtl
  extensions:       ForeignFunctionInterface
  c-sources:        cbits/global.c

  includes:           morfeusz.h
  extra-libraries:    morfeusz

  if !flag(disable-bundled-morfeusz) && os(linux)
    -- extra-lib-dirs is set programmaticaly in Setup.Configure.
    include-dirs:       libmorfeusz   

source-repository head
    type: git
    location: git://github.com/kawu/morfeusz.git
