name:               morfeusz
version:            0.5
synopsis:           Bindings to the morphological analyser Morfeusz
description:
    The library provides bindings to the morphological analyser Morfeusz
    <http://sgjp.pl/morfeusz/>.
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.6
copyright:          Copyright (c) 2012 IPI PAN
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           Natural Language Processing
homepage:           https://github.com/kawu/morfeusz
build-type:         Simple

-- extra-source-files:
--   Setup/Configure.hs
--   libmorfeusz/morfeusz.h
-- 
-- data-dir: libmorfeusz
-- 
-- data-files: README, libmorfeusz.so

library
  hs-source-dirs: src
  exposed-modules: 
      NLP.Morfeusz
  other-modules:
      NLP.Morfeusz.Lock
    , NLP.Morfeusz.Lock.Internal

  -- Package 'directory' is a Setup dependency!
  build-depends:
      base              >= 4        && < 5
    , containers        >= 0.4      && < 0.6
    , pedestrian-dag    >= 0.1      && < 0.2
    , text
    , bytestring
    , mtl
    , directory

  extensions:       ForeignFunctionInterface
  c-sources:        cbits/global.c

  -- REMOVE: extra-lib-dirs is set programmaticaly in Setup.Configure.
  include-dirs:       libmorfeusz   
  includes:           morfeusz.h
  extra-libraries:    morfeusz

source-repository head
    type: git
    location: git://github.com/kawu/morfeusz.git
