name:               morfeusz
version:            2.0.0
synopsis:           Bindings to the morphological analyser Morfeusz2
description:
    The library provides bindings to the morphological analyser Morfeusz2
    <http://sgjp.pl/morfeusz/>.
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.6
copyright:          Copyright (c) 2012 IPI PAN
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           Natural Language Processing
homepage:           https://github.com/kawu/morfeusz
build-type:         Simple


library
  exposed-modules:  NLP.Morfeusz
  other-modules:    NLP.Morfeusz.Lock, NLP.Morfeusz.Lock.Internal

  -- Package 'directory' is a Setup dependency!
  build-depends:
      base        >= 4        && < 5
    , containers  >= 0.4      && < 0.6
    , text        >= 0.11     && < 1.3
    , bytestring  >= 0.9      && < 0.11

  extensions:       ForeignFunctionInterface
  c-sources:        cbits/global.c

  includes:           morfeusz2_c.h
  extra-libraries:    morfeusz2

source-repository head
    type: git
    location: git://github.com/kawu/morfeusz.git
